bk_ida/gccida/c3/ggc_print_common_statistics
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1143:50: error: unknown type name 'ggc_statistics_0'; did you mean 'ggc_statistics'?
void  ggc_print_common_statistics( FILE *stream, ggc_statistics_0 *stats) 
                                                 ^~~~~~~~~~~~~~~~
                                                 ggc_statistics
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc.h:225:3: note: 'ggc_statistics' declared here
} ggc_statistics;
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1213:11: error: use of undeclared identifier 'xmm'
( __m128i)xmm*(short *)0x8021E0), 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1214:11: error: use of undeclared identifier 'xmm'
( __m128d)xmm*(short *)0x8021F0); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1218:11: error: use of undeclared identifier 'xmm'
( __m128i)xmm*(short *)0x8021E0), 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1219:11: error: use of undeclared identifier 'xmm'
( __m128d)xmm*(short *)0x8021F0); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1227:27: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
( _mm_unpackhi_pd( v3, v3).m128d_f64[0] + v3.m128d_f64[0]) 
  ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1227:45: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
( _mm_unpackhi_pd( v3, v3).m128d_f64[0] + v3.m128d_f64[0]) 
                                          ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1229:29: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ ( _mm_unpackhi_pd( v4, v4).m128d_f64[0] + v4.m128d_f64[0])); 
    ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1229:47: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ ( _mm_unpackhi_pd( v4, v4).m128d_f64[0] + v4.m128d_f64[0])); 
                                            ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1287:11: error: use of undeclared identifier 'xmm'
( __m128i)xmm*(short *)0x8021E0), 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1288:11: error: use of undeclared identifier 'xmm'
( __m128d)xmm*(short *)0x8021F0); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1292:11: error: use of undeclared identifier 'xmm'
( __m128i)xmm*(short *)0x8021E0), 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1293:11: error: use of undeclared identifier 'xmm'
( __m128d)xmm*(short *)0x8021F0); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1301:27: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
( _mm_unpackhi_pd( v7, v7).m128d_f64[0] + v7.m128d_f64[0]) 
  ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1301:45: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
( _mm_unpackhi_pd( v7, v7).m128d_f64[0] + v7.m128d_f64[0]) 
                                          ~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1303:29: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ ( _mm_unpackhi_pd( v8, v8).m128d_f64[0] + v8.m128d_f64[0])); 
    ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/ggc-common.c:1303:47: error: member reference base type '__m128d' (vector of 2 'double' values) is not a structure or union
/ ( _mm_unpackhi_pd( v8, v8).m128d_f64[0] + v8.m128d_f64[0])); 
                                            ~~^~~~~~~~~~
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ggc_print_common_statistics/src/obj/ggc-common.o] Error 1
